# ffmpeg-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: CMakeLists.txt  decode_video.cpp
src/: FFmpegCodecCtx.cpp  FFmpegCodecCtx.hpp  FFmpegCpp.hpp  FFmpegFormatCtx.cpp  FFmpegFormatCtx.hpp  FFmpegFrame.cpp  FFmpegFrame.hpp  FFmpegIOCtx.cpp  FFmpegPacket.cpp  FFmpegPacket.hpp  FFmpegSwsCtx.cpp  FFmpegSwsCtx.hpp  Utils.cpp  Utils.hpp
